fix spacing in edit modals

--- a/src/main/resources/public/app.css
+++ b/src/main/resources/public/app.css
@@ -47,10 +47,6 @@ nav {
   color: black;
 }
 
-.modal button {
-  margin-left: 10px;
-}
-
 #loginForm {
   width: 250px;
 }
